src/test/ui/consts/invalid-union.64bit.stderr
error[E0080]: it is undefined behavior to use this value
  --> $DIR/invalid-union.rs:41:1
   |
LL | fn main() {
   | ^^^^^^^^^ constructing invalid value at .<deref>.y.<enum-variant(B)>.0: encountered `UnsafeCell` in a `const`
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: 8, align: 8) {
               ╾───────alloc7────────╼                         │ ╾──────╼
           }

error[E0080]: erroneous constant used
  --> $DIR/invalid-union.rs:42:25
   |
LL |     let _: &'static _ = &C;
   |                         ^^ referenced constant has errors

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
